# rolog

./: .Rbuildignore  .gitignore  .gitmodules  CMakeLists.txt  CRAN-SUBMISSION  DESCRIPTION  LICENSE  Makefile  NAMESPACE  NEWS.md  README.md  cran-comments.md  html.Rmd  html.html  mathml.pl  pack.pl
.github/workflows/: prolog.yaml  r.yaml  r.yml
R/: Defaults.R  RcppExports.R  as.rolog.R  consult.R  findall.R  myquote.R  once.R  plbase.R  portray.R  preproc.R  query.R  rolog.R  rologpp.R
cmake/: FindR.cmake  FindRInside.cmake  FindRcpp.cmake
inst/: .gitignore  html.Rmd  likes.pl  mathml.Rmd
inst/doc/: bibliography.bibtex  rolog.R  rolog.Rmd  rolog.html
inst/home/lib/: readme.txt
inst/include/: see-swipl-include.txt
inst/pl/: .gitignore  backdoor.pl  family.pl  interval.pl  likes.pl  mathjax.pl  mathjax.pl~  mathml.Rmd  mathml.pl  r_eval.pl  rolog.pl  telescope.pl
jss/: .gitignore  2022-05-rolog-coverletter.docx  article-concordance.tex  article.Rnw  article.tex  bibliography.bib  rolog-concordance.tex  rolog.Rnw  rolog.bbl  rolog.docx  rolog.tex
man/: as.rolog.Rd  clear.Rd  consult.Rd  dot-identity.Rd  findall.Rd  once.Rd  portray.Rd  postproc.Rd  preproc.Rd  query.Rd  rolog_done.Rd  rolog_init.Rd  rolog_ok.Rd  rolog_options.Rd  rolog_quote.Rd  submit.Rd
mathpsych/: .gitignore
prolog/: multi.pl  rolog.pl  rologpp.pl  rs_rolog.pl
src/: .gitignore  Makevars  Makevars.Make  Makevars.old  Makevars.ucrt  Makevars.win  RcppExports.cpp  crolog.c  crolog.cpp  rolog.cpp  rolog.cpp2.txt  rolog_cpp2.txt  rologpp.cpp
src/linux/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
src/linux/home/: swipl.rc
src/linux/src/: Makefile  cmake_install.cmake  config.h  parms.h  pl-atom.ic  pl-funct.ic  swipl.1  swipl.home  swipl.pc
src/win64/src/: config.h
test/: test_rolog.pl
tests/: testthat.R
tests/testthat/: test-rolog.R
vignettes/: .gitignore  bibliography.bibtex  rolog.Rmd
